--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 authors = [{ name = "marcosfmmota", email = "marcosfmmota@gmail.com" }]
 dependencies = [
     "jsonargparse[signatures]>=4.34.0,<5",
-    "torchcp>=1.0.2,<2", "torch-geometric>=2.6.1,<3", "torchshow>=0.5.2,<0.6",
+    "torchcp>=1.0.2,<2", "torch-geometric>=2.6.1,<3", "torchshow>=0.5.2,<0.6", "torchsort>=0.1.10,<0.2",
 ]
 description = "Add a short description here"
 name = "cp_t_revision"
