--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 authors = [{ name = "marcosfmmota", email = "marcosfmmota@gmail.com" }]
 dependencies = [
     "jsonargparse[signatures]>=4.34.0,<5",
-    "torchcp>=1.0.2,<2", "torch-geometric>=2.6.1,<3", "torchshow>=0.5.2,<0.6", "torchsort>=0.1.10,<0.2",
+    "torchcp>=1.0.2,<2", "torch-geometric>=2.6.1,<3", "torchshow>=0.5.2,<0.6",
 ]
 description = "Add a short description here"
 name = "cp_t_revision"
@@ -14,11 +14,11 @@ build-backend = "hatchling.build"
 requires = ["hatchling"]
 
 [tool.pixi.workspace]
-channels = ["nvidia", "pytorch", "conda-forge"]
+channels = ["https://prefix.dev/conda-forge"]
 platforms = ["linux-64"]
 
 [tool.pixi.system-requirements]
-cuda = "12.1"
+cuda = "12.6"
 
 [tool.pixi.pypi-dependencies]
 cp_t_revision = { path = ".", editable = true }
@@ -26,11 +26,11 @@ cp_t_revision = { path = ".", editable = true }
 [tool.pixi.tasks]
 
 [tool.pixi.dependencies]
-python = "3.12.*"
+python = ">=3.11,<3.12"
 pytorch = ">=2.5.1,<3"
-pytorch-cuda = { version = "12.1.*", channel = "pytorch" }
+pytorch-gpu = "*"
 torchvision = ">=0.20.1,<0.21"
-libjpeg-turbo = { version = "*", channel = "conda-forge" }
+libjpeg-turbo = "*"
 lightning = ">=2.4.0,<3"
 mlflow = ">=2.18.0,<3"
 torchmetrics = ">=1.5.2,<2"
@@ -41,6 +41,7 @@ pillow = ">=10.3.0,<11"
 altair = ">=5.5.0,<6"
 vl-convert-python = ">=1.7.0,<2"
 selenium = ">=4.35.0,<5"
+torchsort = "*"
 
 [tool.pixi.environments]
 dev = { features = ["dev"] }
